# Avito-VLM-Engine

./: .gitignore  COLAB_AVISION.ipynb  COLAB_AVISION_last.ipynb  COLAB_OUTFIT_CLIP_PIPELINE.ipynb  COLAB_QUICK_FIX.md  COLAB_SETUP.md  FIX_OVERFITTING.md  QUICK_START_COLAB.md  README.md  SCRAPER_10K_INSTRUCTIONS.md  WHEEL_EXPLANATION.md  avito_all_markers.txt  avito_metadata_test.json  avito_scraper.py  build_wheel.py  clean_dataset_by_entropy.py  dedupe_images.py  fashion_search_bus.py  monitor.sh  multimodal_search.py  organize_data.py  pyproject.toml  requirements-colab.txt  requirements.txt  run_scraper_and_dedupe.bat  run_scraper_and_dedupe.sh  test_avision.py  test_avito_metadata.py  train_classifier.py
